More alignment fixes

--- a/src/Components/Education/education.scss
+++ b/src/Components/Education/education.scss
@@ -8,8 +8,8 @@
     padding-right: 10%;
 
     @include mobile{
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 2%;
+        padding-right: 2%;
     }
     h1{
         font-size: 50px;
@@ -19,6 +19,7 @@
         align-items: center;
         @include mobile{
             font-size: 35px;
+            text-align: center;
             text-align-last: center;
         }
     }
@@ -31,6 +32,7 @@
           //  padding-left: 5%;
            // padding-right: 5%;
             font-size: 22.5px;
+            text-align: center;
             align-items: center;
             text-align-last: center;
         }
@@ -46,6 +48,7 @@
             padding-bottom: 10px;
             font-size: 17.5px;
             align-items: center;
+            text-align: center;
             text-align-last: center;
         }
     }
@@ -59,6 +62,7 @@
             font-size: 17.5px;
             padding-top: 0;
             align-items: center;
+            text-align: center;
             text-align-last: center;
         }
     }
@@ -71,6 +75,7 @@
         font-weight: 100;
         @include mobile{
             text-align: center;
+            text-align-last:center ;
             align-items: center;
              font-size: 17.5px;
              padding-right: 10%;
